# RayTracer

./: CMakeLists.txt
examples/: Color.py  filter.py  renderer.py
examples/python/glowing_line/: filter.py
solutions/: config.txt
src/: config.cpp  config.h  main.cpp
src/color/: color.h
src/export/: PPMExporter.cpp  PPMExporter.h
src/filter/: SoftwareFilter.h
src/filter/Python/: PythonFilter.cpp  PythonFilter.h
src/math/: CommonMath.h  vec2.h  vec3.h
src/renderer/: renderer.cpp  renderer.h
src/time/: StopWatch.h
src/utilities/: StringHelper.cpp  StringHelper.h
